# image-to-tex

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: advanced_usage.py  api_client.py  basic_usage.py
src/image_to_tex/: __init__.py
src/image_to_tex/api/: __init__.py  models.py  routes.py
src/image_to_tex/cli/: __init__.py  commands.py
src/image_to_tex/core/: __init__.py  converter.py  vision_client.py
src/image_to_tex/utils/: __init__.py  image_handler.py  latex_formatter.py
tests/: __init__.py  test_api.py  test_converter.py  test_utils.py
